k8s/Auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  selector:
    matchLabels:
      app: auth
  
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: letsgo21/authe:latest
---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
  - port: 3000
    targetPort: 3000
