k8s/Order-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: letsgo21/order:latest
---


apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: auth-depl
    type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
