k8s/Product.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-depl
spec:
  selector:
    matchLabels:
      app: product
  
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: letsgo21/product:latest
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
    - port: 3000
      targetPort: 3000
