k8s/Rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
spec:
  selector:
    matchLabels:
      app: somerabbit
  template:
    metadata:
      labels:
        app: somerabbit
    spec:
      containers:
      - name: somerabbit
        image: rabbitmq:3-management
        


---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: somerabbit
  type: LoadBalancer
  ports:
  - name: main
    port:  5672
    targetPort: 5672
  - name: management 
    port: 15672
    targetPort: 15672
